syntax = "proto2";

package StoreProto;

option java_package = "io.github.jinganix.webpb.sample.proto.store";

import "webpb/WebpbExtend.proto";
import "WebpbOptions.proto";

import "Common.proto";

// It should be ignored by jacoco, as it is marked with @Generated
option (f_opts).java = {annotation: '@Generated'};

message StorePb {
  required int64 id = 1 [(opts).ts = {as_string: true}];
  required string name = 2;
  required string city = 3;
}

message StoreGreetingRequest {
  option (m_opts).opt = {
    method: "POST"
    path: "/stores/greeting"
  };

  required string customer = 1;
}

message StoreGreetingResponse {
  required string greeting = 1;
}

message ValidationResponse {
  map<string, string> errors = 1;
}

message StoreListRequest {
  option (m_opts).opt = {
    method: "GET"
    path: "/stores?page={pageable.page}&size={pageable.size}"
  };

  required CommonProto.PageablePb pageable = 1 [(opts).opt = {in_query: true}, (opts).java = {annotation: '@Valid'}];
}

message StoreListResponse {
  required CommonProto.PagingPb paging = 1;
  repeated StorePb stores = 2;
}

message StoreVisitRequest {
  option (m_opts).opt = {
    method: "POST"
    path: "/stores/{id}"
  };

  required int64 id = 1 [(opts).opt = {in_query: true}, (opts).ts = {as_string: true}, (opts).java = {annotation: '@NotNull'}];
  required string customer = 2 [(opts).java = {annotation: '@NotBlank'}];
}

message StoreVisitResponse {
  required StorePb store = 1;
  required string greeting = 2;
}
